# CMakeTinyXML2

./: .gitignore  CMakeLists.txt  CMakeTinyXML2Config.h.in  README.md  build.sh  main.cpp  run.sh
resources/: team.xml
